# cybuild-godot

./: .gitignore  Cargo.toml  LICENSE  README.md  control.gd  cybuild.gdextension  loader.gd  loader.gd.uid  pack_descriptor.gd  pack_descriptor.gd.uid  project.godot
addons/cybuild-godot/: cybuild-godot.gd  cybuild-godot.gd.uid  plugin.cfg
examples/packs/: .gitignore  build.toml  control.gd.uid  control.tscn  project.godot
examples/packs/packs/pack_B/loads/B/: pack.json
loads/main/: pack.json
packs/pack_A/loads/A/: pack.json
src/: cli_wrapper.rs  env_detect.rs  lib.rs
